change method name

--- a/BathWashDay.xcodeproj/xcshareddata/xcschemes/BashWashCore.xcscheme
+++ b/BathWashDay.xcodeproj/xcshareddata/xcschemes/BashWashCore.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "241C4203282C535F008995C9"
+            BuildableName = "BathWashCore.framework"
+            BlueprintName = "BathWashCore"
+            ReferencedContainer = "container:BathWashDay.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
